# Digit_recognition

./: .gitignore  Cargo.toml  collected_data.json
src/: app.rs  data.rs  eval.rs  main.rs  model.rs  predict.rs  train.rs
